<resources>
    // Strings for UI
    <string name="app_name">Planesmith</string>
    <string name="story">Story</string>
    <string name="story_title">Story Title</string>
    <string name="characters">Characters</string>
    <string name="world">World</string>
    <string name="synopsis">Synopsis</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="plus">+</string>
    <string name="new_story">New Story</string>
    <string name="add_folder">Add Folder</string>
    <string name="add_item">Add Item</string>

    //Strings for Character
    <string name="character_name">Character Name</string>
    <string name="character_age">Age</string>
    <string name="character_height">Height</string>
    <string name="character_weight">Weight</string>
    <string name="character_gender">Gender</string>
    <string name="character_group">Affiliation</string>
    <string name="character_details">Details</string>

    //Strings for World
    <string name="world_name">Name</string>
    <string name="world_details">Details</string>

    //Strings for Story
    <string name="chapter_name">Chapter Name</string>
    <string name="chapter_content">Chapter Content</string>

</resources>