<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="start"
        android:background="@color/colorAccent"/>

    <RelativeLayout
        android:id="@+id/landing_content"
        android:layout_width="match_parent"
        android:layout_height="680dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:layout_marginTop="1dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="-55dp"
            android:text="@string/synopsis"
            android:textColor="#000"
            android:textSize="30sp"
            android:fontFamily="sans-serif-light"/>

        <TextView
            android:id="@+id/encyclopedia"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="-150dp"
            android:text="@string/encyclopedia"
            android:textColor="#000"
            android:textSize="30sp"
            android:fontFamily="sans-serif-light"/>

        <Button
            android:id="@+id/characters"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="243dp"
            android:text="@string/characters"
            android:textAlignment="textStart"
            android:textColor="#000"
            android:textSize="15sp"
            app:backgroundTint="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/world"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="190dp"
            android:text="@string/world"
            android:textAlignment="textStart"
            android:textColor="#000"
            android:textSize="15sp"
            app:backgroundTint="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/story"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="129dp"
            android:text="@string/story"
            android:textAlignment="textStart"
            android:textColor="#000"
            android:textSize="15sp"
            app:backgroundTint="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/storytitle2"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/synopsis"
            android:layout_marginStart="17dp"
            android:layout_marginTop="67dp"
            android:layout_marginEnd="4dp"
            android:background="#00000000"
            android:gravity="start"
            android:hint="@string/synopsis"
            android:minHeight="48dp" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/storytitle"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/header"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="#00000000"
        android:gravity="start"
        android:hint="@string/story_title"
        android:minHeight="48dp" />

</RelativeLayout>